// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSS4 HSL Colors 1`] = `
".hsl{
color:red;
border-color:rgba(0,255,255,.2)
}"
`;

exports[`CSS4 HWB Colors 1`] = `
".hwb{
color:rgba(128,255,0,.5)
}"
`;

exports[`Color Function 1`] = `
".yellow{
color:rgba(255,220,0,.9)
}"
`;

exports[`Easing Gradients 1`] = `
".demo{
background:linear-gradient(to bottom,#111 ,rgba(17,17,17,.94505) 7.9%,rgba(17,17,17,.88294) 15.3%,rgba(17,17,17,.81522) 22.2%,rgba(17,17,17,.7426) 28.7%,rgba(17,17,17,.66692) 34.8%,rgba(17,17,17,.58891) 40.6%,rgba(17,17,17,.50925) 46.2%,rgba(17,17,17,.42866) 51.7%,rgba(17,17,17,.34817) 57.2%,rgba(17,17,17,.2693) 62.8%,rgba(17,17,17,.19309) 68.7%,rgba(17,17,17,.12126) 75.2%,rgba(17,17,17,.05882) 82.6%,rgba(17,17,17,.01457) 91.2%,rgba(17,17,17,0))
}"
`;

exports[`Hex with Alpha 1`] = `
".blue{
color:rgba(17,17,255,.8)
}"
`;

exports[`Improved Color Palette 1`] = `
".red{
color:#ff4136
}"
`;

exports[`RGBA with Hex 1`] = `
".red{
color:rgba(255,17,17,.8)
}"
`;
